crates/serde-feather/tests/ui/generic_struct.stderr
error: FeatherDeserialize only supports non-generic structs in this MVP
 --> tests/ui/generic_struct.rs:4:20
  |
4 | struct GenericModel<T> {
  |                    ^^^
