crates/serde-feather/tests/ui/generic_struct.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
struct GenericModel<T> {
    value: T,
}

fn main() {}
